[gd_scene load_steps=10 format=2]

[ext_resource path="res://Enemies/Ghost.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/Ghost.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 8.0

[sub_resource type="Animation" id=2]
resource_name = "Fade In"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Fade Out"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 9.0
height = 10.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 9.0
height = 10.0

[sub_resource type="CircleShape2D" id=6]
radius = 50.2494

[node name="Ghost" instance=ExtResource( 2 )]
collision_mask = 0
script = ExtResource( 3 )
MAX_SPEED = 30

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 1 )

[node name="Collider" parent="." index="1"]
shape = SubResource( 1 )

[node name="AnimationPlayer" parent="." index="2"]
playback_speed = 3.0
"anims/Fade In" = SubResource( 2 )
"anims/Fade Out" = SubResource( 3 )

[node name="Collider" parent="Hurtbox" index="0"]
shape = SubResource( 4 )

[node name="Collider" parent="Hitbox" index="0"]
shape = SubResource( 5 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="6"]
scale = Vector2( 1, 1.5 )

[node name="VisibilityTimer" type="Timer" parent="." index="7"]
wait_time = 4.0
one_shot = true

[node name="PlayerChecker" type="Area2D" parent="." index="8"]
collision_layer = 0
collision_mask = 5

[node name="Collider" type="CollisionShape2D" parent="PlayerChecker" index="0"]
shape = SubResource( 6 )
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="area_entered" from="PlayerChecker" to="." method="_on_PlayerChecker_area_entered"]
[connection signal="area_exited" from="PlayerChecker" to="." method="_on_PlayerChecker_area_exited"]

[editable path="Hurtbox"]

[editable path="Hitbox"]
